	PR rtl-optimization/47299 	* expr.c (expand_expr_real_2) <case WIDEN_MULT_EXPR>: Don't use 	subtarget.  Use normal multiplication if both operands are 	constants. 	* expmed.c (expand_widening_mult): Don't try to optimize constant 	multiplication if op0 has VOIDmode.  Convert op1 constant to mode 	before using it.

* gcc.c-torture/execute/pr47299.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168944 138bc75d-0d04-0410-961f-82ee72b054a4